Exam_mock_2/istio.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: strict
  namespace: encrypted
spec:
  mtls:
    mode: STRICT
