Exam_mock_2/peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: encript
  namespace: encrypted
spec:
  mtls:
    mode: STRICT
