Exam_mock_2/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rocket-ingress
  namespace: space
spec:
  tls:
    - hosts:
        - rocket-server.local
      secretName: rocket-tls
  ingressClassName: nginx
  rules:
    - host: "rocket-server.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rocket-server
                port:
                  number: 80
